- Added in game rebirth / prestige editing admin commands - Fixed bukkit tick balancer concurrency issues - Fixed UniqueRandom concurrency issues - Fixed GUI List null pointers - Added more placeholders - Fixes for max prestige - Fixed user rebirth saving - Updated utils