@@ -2,10 +2,10 @@ package me.prisonranksx.utils;
 
 import java.util.Collections;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 /**
- * 
  * Generate random unique numbers. Using the method {@link #generate()} x times
  * won't generate the same number till the amount of generated numbers reaches
  * the limit. For example, {@link #generate()} was used 10 times. The generated
@@ -14,14 +14,13 @@ import java.util.concurrent.CompletableFuture;
  * the method again can generate one of the numbers that got generated such as 4
  * since the limit was reached. The same outcome can be forced using
  * {@link #reset()}.
- *
  */
 public class UniqueRandom {
 
 	private static final int DEFAULT_LIMIT = 10;
 	private static final UniqueRandom GLOBAL = new UniqueRandom(DEFAULT_LIMIT);
 	private int limit;
-	private LinkedList<Integer> uniqueList;
+	private final List<Integer> uniqueList;
 
 	public static synchronized UniqueRandom global() {
 		return GLOBAL;
@@ -33,8 +32,8 @@ public class UniqueRandom {
 
 	public UniqueRandom(int limit) {
 		this.limit = limit;
-		uniqueList = new LinkedList<>();
-		for (int j = 1; j <= limit; ++j) uniqueList.addLast(j);
+		uniqueList = Collections.synchronizedList(new LinkedList<>());
+		for (int j = 1; j <= limit; ++j) uniqueList.add(j);
 	}
 
 	public UniqueRandom(int limit, LinkedList<Integer> uniqueList) {
@@ -51,23 +50,25 @@ public class UniqueRandom {
 	}
 
 	public int generateDefault() {
-		if (!uniqueList.isEmpty()) return uniqueList.removeFirst();
-		for (int j = 1; j <= DEFAULT_LIMIT; ++j) uniqueList.addLast(j);
+		if (!uniqueList.isEmpty()) return uniqueList.remove(0);
+		for (int j = 1; j <= DEFAULT_LIMIT; ++j) uniqueList.add(j);
 		Collections.shuffle(uniqueList);
-		return uniqueList.removeFirst();
+		return uniqueList.remove(0);
 	}
 
 	/**
 	 * Gets next int from shuffled list, shuffles list again if all numbers have
 	 * been generated
-	 * 
+	 *
 	 * @return random unique int
 	 */
 	public int generate() {
-		if (!uniqueList.isEmpty()) return uniqueList.removeFirst();
-		for (int j = 1; j <= limit; ++j) uniqueList.addLast(j);
-		Collections.shuffle(uniqueList);
-		return uniqueList.removeFirst();
+		synchronized (uniqueList) {
+			if (!uniqueList.isEmpty()) return uniqueList.remove(0);
+			for (int j = 1; j <= limit; ++j) uniqueList.add(j);
+			Collections.shuffle(uniqueList);
+			return uniqueList.remove(0);
+		}
 	}
 
 	public int generate(boolean async) {
@@ -76,10 +77,12 @@ public class UniqueRandom {
 
 	public CompletableFuture<Integer> generateAsync() {
 		return CompletableFuture.supplyAsync(() -> {
-			if (!uniqueList.isEmpty()) return uniqueList.removeFirst();
-			for (int j = 1; j <= limit; ++j) uniqueList.addLast(j);
-			Collections.shuffle(uniqueList);
-			return uniqueList.removeFirst();
+			synchronized (uniqueList) {
+				if (!uniqueList.isEmpty()) return uniqueList.remove(0);
+				for (int j = 1; j <= limit; ++j) uniqueList.add(j);
+				Collections.shuffle(uniqueList);
+				return uniqueList.remove(0);
+			}
 		});
 	}
 
